[gd_scene load_steps=21 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://maps/marble_run_towers/marble_run_towers.tscn" type="PackedScene" id=2]
[ext_resource path="res://music/sferephall-track.mp3" type="AudioStream" id=4]

[sub_resource type="SpatialMaterial" id=1]
metallic = 1.0
roughness = 0.17

[sub_resource type="SphereShape" id=2]
radius = 0.2

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 0.6, 0.34902, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.78, 0.3471, 0.078, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 0.53102, 0.235294, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.35, 0.35, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.0784314, 0.0784314, 0.784314, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.235294, 0.235294, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 1, 0.34902, 0.34902, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.784314, 0.0784314, 0.0784314, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 1, 0.235294, 0.235294, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.35, 1, 0.35, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.078, 0.78, 0.078, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.235294, 1, 0.235294, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.78, 0.78, 0.78, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Main" type="Spatial"]
script = ExtResource( 1 )

[node name="Ball" type="RigidBody" parent="." groups=["the_ball"]]
can_sleep = false

[node name="BallVisual" type="CSGSphere" parent="Ball"]
radius = 0.2
radial_segments = 24
rings = 12
material = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Ball"]
shape = SubResource( 2 )

[node name="SpotLightPivot" type="Spatial" parent="."]

[node name="SpotLightPositive" type="SpotLight" parent="SpotLightPivot"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 2, 0 )
light_energy = 0.168
shadow_enabled = true
spot_angle = 19.7683

[node name="SpotLightNegative" type="SpotLight" parent="SpotLightPivot"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 2, 0 )
visible = false
light_negative = true
spot_angle = 19.7683

[node name="CameraPivot" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="CameraPivot"]
transform = Transform( 0.707107, -0.408244, 0.577353, 0, 0.816501, 0.577345, -0.707107, -0.408244, 0.577353, 16, 15.427, 16 )
fov = 30.0

[node name="TrackMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
bus = "Music"

[node name="BottomBar" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.98
anchor_right = 0.5
anchor_bottom = 0.98
margin_left = -216.0
margin_top = -80.0
margin_right = 216.0

[node name="ButtonExplosive" type="Button" parent="BottomBar"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "EXPLOSIVE"

[node name="MarginContainer" type="MarginContainer" parent="BottomBar"]
margin_left = 84.0
margin_right = 84.0
margin_bottom = 80.0

[node name="ButtonAntigrav" type="Button" parent="BottomBar"]
margin_left = 88.0
margin_right = 168.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
text = "ANTIGRAV"

[node name="MarginContainer2" type="MarginContainer" parent="BottomBar"]
margin_left = 172.0
margin_right = 172.0
margin_bottom = 80.0

[node name="ButtonDampen" type="Button" parent="BottomBar"]
margin_left = 176.0
margin_right = 256.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
text = "DAMPEN"

[node name="MarginContainer3" type="MarginContainer" parent="BottomBar"]
margin_left = 260.0
margin_right = 260.0
margin_bottom = 80.0

[node name="ButtonBarrier" type="Button" parent="BottomBar"]
margin_left = 264.0
margin_right = 344.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
text = "BARRIER"

[node name="MarginContainer4" type="MarginContainer" parent="BottomBar"]
margin_left = 348.0
margin_right = 348.0
margin_bottom = 80.0

[node name="ButtonSlowMotion" type="Button" parent="BottomBar"]
margin_left = 352.0
margin_right = 432.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 19 )
custom_styles/pressed = SubResource( 20 )
custom_styles/normal = SubResource( 21 )
text = "SLO-MO"

[node name="MarbleRunTowers" parent="." instance=ExtResource( 2 )]

[connection signal="button_down" from="BottomBar/ButtonExplosive" to="." method="_on_ButtonExplosive_button_down"]
[connection signal="button_down" from="BottomBar/ButtonAntigrav" to="." method="_on_ButtonAntigrav_button_down"]
[connection signal="button_down" from="BottomBar/ButtonDampen" to="." method="_on_ButtonDampen_button_down"]
[connection signal="button_down" from="BottomBar/ButtonBarrier" to="." method="_on_ButtonBarrier_button_down"]
[connection signal="button_down" from="BottomBar/ButtonSlowMotion" to="." method="_on_ButtonSlowMotion_button_down"]
[connection signal="button_up" from="BottomBar/ButtonSlowMotion" to="." method="_on_ButtonSlowMotion_button_up"]
